--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     
 </body>
