--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    </div>
 
    <div class="home-img">
-       <img src="img/grupal1.jpg" alt="">
+       <img src="grupal1.jpg" alt="">
    </div>
 
 </section>
