--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="container">
 
    <div class="container-box">
-       <img src="img/WABSIDE.PNG">
+       <img src="WABSIDE.PNG">
        <h3 class="colorcito">Contemporaneo</h3>
        <p>La danza contemporánea puede definirse como un estilo resultante de fusionar otros que encuentran su base en el ballet clásico pero está exenta de el rigor de esta disciplina. 
            A diferencia de la danza clásica, el baile contemporáneo adquiere una expresión corporal más libre en cuanto a los movimientos.</p>
@@ -59,7 +59,7 @@
    </div>
 
    <div class="container-box">
-       <img src="img/WABSIDE.PNG">
+       <img src="WABSIDE.PNG">
        <h3 class="colorcito">Dance Hall</h3>
        <p>El dancehall es un género musical nacido en Jamaica durante la década de los setenta, aunque no se hizo verdaderamente muy popular hasta los casi los años noventa. 
            El origen del dancehall tiene en la historia del género muchos factores culturales y sociales de la Jamaica de la época, ya que fueron años de grandes cambios políticos. Se considera una evolución de reggae.</p>
@@ -67,7 +67,7 @@
    </div>
 
    <div class="container-box">
-       <img src="img/WABSIDE.PNG">
+       <img src="WABSIDE.PNG">
        <h3 class="colorcito">HIP-HOP</h3>
        <p>el Hip hop es la cultura que engloba distintas corrientes callejeras y que va mucho más allá de cantar. 
            Se trata de un movimiento cultural que nació en la década de los 70 en las calles del distrito del Bronx, en Nueva York, como respuesta a la represiva situación en la que vivían los ciudadanos afroamericanos, recluidos en una especie de gueto moderno. </p>
@@ -87,7 +87,7 @@
         <div class="list">
 
             <div class="item">
-                <img src="img/contempo1.jpg" alt="">
+                <img src="contempo1.jpg" alt="">
             
                 <div class="contenido">
                     <div class="title">DANZA</div>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="item">
-                <img src="img/contempo2.jpg" alt="">
+                <img src="contempo2.jpg" alt="">
 
                 <div class="contenido">
                     <div class="title">DANZA</div>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="item">
-                <img src="img/contempo3.jpg" alt="">
+                <img src="contempo3.jpg" alt="">
 
                 <div class="contenido">
                     <div class="title">DANZA</div>
@@ -123,7 +123,7 @@
             </div>
 
             <div class="item">
-                <img src="img/contempo4.jpg" alt="">
+                <img src="contempo4.jpg" alt="">
 
                 <div class="contenido">
                     <div class="title">DANZA</div>
@@ -141,16 +141,16 @@
         <div class="fotos">
 
             <div class="item">
-                <img src="img/contempo1.jpg" alt="">
+                <img src="contempo1.jpg" alt="">
             </div>
             <div class="item">
-                <img src="img/contempo2.jpg" alt="">
+                <img src="contempo2.jpg" alt="">
             </div>
             <div class="item">
-                <img src="img/contempo3.jpg" alt="">
+                <img src="contempo3.jpg" alt="">
             </div>
             <div class="item">
-                <img src="img/contempo4.jpg" alt="">
+                <img src="contempo4.jpg" alt="">
             </div>
 
         </div>
@@ -199,7 +199,7 @@
         <div class="grupos-text">
 
             <div class="grupos-img">
-                <img src="img/fuego.webp">
+                <img src="fuego.webp">
             </div>
             <h2>WABSIDE</h2>
             <p>
@@ -214,7 +214,7 @@
 
         <div class="grupos-text">
             <div class="grupos-img">
-                <img src="img/diamante.png">
+                <img src="diamante.png">
             </div>
             <h2>ONYX DC </h2>
             <p>
@@ -332,7 +332,7 @@
             </div></p>
             <nav>
                 <ul>
-                    <div class="d-inline-flex p-2"><img src="img/fotico.jpeg" alt="YINA"><i class="bi bi-bookmark-heart-fill"></i> <p>Yinaury Toribio Alcantara, yt20-0815. <i class="bi bi-bookmark-heart-fill"></i></p><a href="https://www.instagram.com/yina.toribiio/profilecard/?igsh=cDExOGtuZjFmYmg=">Instagram personal</a> </div>
+                    <div class="d-inline-flex p-2"><img src="fotico.jpeg" alt="YINA"><i class="bi bi-bookmark-heart-fill"></i> <p>Yinaury Toribio Alcantara, yt20-0815. <i class="bi bi-bookmark-heart-fill"></i></p><a href="https://www.instagram.com/yina.toribiio/profilecard/?igsh=cDExOGtuZjFmYmg=">Instagram personal</a> </div>
                     <li><i class="bi bi-twitter"></i> <a href="https://www.instagram.com/wabside_dr/profilecard/?igsh=cDExOGtuZjFmYmg=">Twitter</a></li>
                     <li><i class="bi bi-instagram"></i> <a href="https://www.instagram.com/wabside_dr/profilecard/?igsh=cDExOGtuZjFmYmg=">Instagram</a></li>
                 </ul>
