--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 
         <div class="contenedor-box">
             <div class="embed-responsive-embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://youtu.be/XuaECf75ZLI?si=kybxWydTwbZjHvFx" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XYTCz9I2fo4?si=fXX-4LGklm4Wdw7Q" allowfullscreen></iframe>
+              </div>             
               </div> 
             <h3 class="colorcito">Dance Hall</h3>
             <p>Las danzas populares o folclóricas. Son las que se basan en la transmisión de la cultura tradicional de un lugar. Expresan los valores de una cultura y las características de su ambiente: el clima, la fauna y la flora. Algunos ejemplos son: el flamenco, el tango, la danza árabe o los bailes de salón.
